--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@ body {
 body {
   font-family: "Oswald", sans-serif;
 }
+/* navigation */
+
 .navbar {
   background-color: #142850;
 }
@@ -34,12 +36,12 @@ body {
   color: #fff;
 }
 .welcome {
-  padding: 4rem;
+  padding: 7rem;
   color: #fff;
   text-align: center;
   background-image: url(/img/bird.jpg);
   background-position: center;
-  background-size: 100%;
+  background-size: 110%;
   background-repeat: no-repeat;
   text-shadow: black 0.1em 0.1em 0.2em;
 }
@@ -51,6 +53,11 @@ body {
 }
 .welcome button {
   margin-top: 2rem;
+  box-shadow: 7px 5px 5px rgb(249, 249, 249);
+}
+.welcome button:hover {
+  box-shadow: 7px 5px 5px rgba(255, 255, 255, 0.326);
+  background-color: #20448a;
 }
 
 /* Histoire */
@@ -60,11 +67,24 @@ body {
   text-align: center;
 }
 
+.container-histoire h2 {
+  font-style: italic;
+  padding: 4rem 0 1.5rem 0;
+}
+
+/* actualité section */
+
 .container-actu {
   text-align: center;
-  padding: 0 0 1.5rem 0;
+  padding: 4rem 0 1.5rem 0;
   font-size: 70px;
 }
+
+.btn:hover {
+  background-color: #7a849947;
+  color: #fff;
+}
+
 .third {
   margin-bottom: 25px;
 }
@@ -86,6 +106,33 @@ body {
   -webkit-filter: blur(0);
   filter: blur(0);
 }
+
+/* pied de page */
+
 .footer {
   border-radius: 15px;
+}
+/* mediaqueries */
+
+@media (max-width: 1200px) {
+  .third img {
+    width: 60%;
+    height: auto;
+  }
+}
+
+@media (min-width: 990px) {
+  .welcome {
+    background-position-y: 70%;
+    background-position-x: 50%;
+  }
+}
+
+@media (max-width: 374px) {
+  .welcome {
+    padding: 5rem 0 0 0;
+  }
+  .welcome button {
+    margin-bottom: 5rem;
+  }
 }
